--- a/src/components/AboutTheTheme.astro
+++ b/src/components/AboutTheTheme.astro
@@ -1,17 +1,105 @@
 ---
-const imgs = [
-  "https://www.blm.gov/sites/default/files/styles/hero_lg_content/public/heros/Steens%20Mountain%20fall%20colors%20from%20Fish%20Creek%20Canyon.png?h=8cf2a5fe&itok=-XKptfBJ",
-  "https://www.blm.gov/sites/default/files/styles/hero_lg_content/public/images/2023-09/PCT%20Oregon%20Bob%20Wick.jpg?h=a1e1a043&itok=rANygdWG",
-  "https://www.blm.gov/sites/default/files/styles/bio_photo/public/images/2023-09/blm-popular-links-image.jpg?itok=Ng-v9eX-",
-  "https://www.blm.gov/sites/default/files/styles/hero_lg_content/public/images/2021-05/Wildflowers-on-tundra-Utukok-River_KimMincer_BLM.jpg?h=827069f2&itok=PEvzdSPZ",
-  "https://www.blm.gov/sites/default/files/styles/hero_lg_content/public/images/2023-10/Sage-Grouse%20closeup.jpg?h=1687c988&itok=m5gyaFBn"
-]
+import img0 from "/images/0.jpg";
+import img1 from "/images/1.jpg";
+import img2 from "/images/2.jpg";
+import img3 from "/images/3.jpg";
+import img4 from "/images/4.jpg";
+import img5 from "/images/5.jpg";
+import img6 from "/images/6.jpg";
+import img7 from "/images/7.jpg";
+import img8 from "/images/8.jpg";
+import img9 from "/images/9.jpg";
+import img10 from "/images/10.jpg";
+import img11 from "/images/11.jpg";
+import img12 from "/images/12.jpg";
+import img13 from "/images/13.jpg";
+import img14 from "/images/14.jpg";
+import img15 from "/images/15.jpg";
+import img16 from "/images/16.jpg";
+import img17 from "/images/17.jpg";
+import img18 from "/images/18.jpg";
+import img19 from "/images/19.jpg";
+import img20 from "/images/20.jpg";
+import img21 from "/images/21.jpg";
+import img22 from "/images/22.jpg";
+import img23 from "/images/23.jpg";
+import img24 from "/images/24.jpg";
+import img25 from "/images/25.jpg";
+import img26 from "/images/26.jpg";
 ---
 
-<div class="flex flex-row justify-evenly gap-4 flex-wrap">
-    {imgs.map((img:string) => (
-      <div class="rounded-md w-fit h-fit">
-        <img class="rounded-md" src={ img } width="300" alt="Steens Mountain fall colors from Fish Creek Canyon" />
-      </div>
-    ))}
+<div class="flex flex-row justify-evenly gap-4 flex-wrap ">
+  <!-- {imgs.map((img:string) => (
+      
+    ))} -->
+
+  <img
+    class="rounded-md shadow-xs"
+    src={img0}
+    width="300"
+    alt="Steens Mountain fall colors from Fish Creek Canyon"
+  />
+
+  <img
+    class="rounded-md shadow-xs"
+    src={img1}
+    width="300"
+    alt="Steens Mountain fall colors from Fish Creek Canyon"
+  />
+
+  <img
+    class="rounded-md shadow-xs"
+    src={img2}
+    width="300"
+    alt="Steens Mountain fall colors from Fish Creek Canyon"
+  />
+
+  <img
+    class="rounded-md shadow-xs"
+    src={img3}
+    width="300"
+    alt="Steens Mountain fall colors from Fish Creek Canyon"
+  />
+
+  <img
+    class="rounded-md shadow-xs"
+    src={img4}
+    width="300"
+    alt="Steens Mountain fall colors from Fish Creek Canyon"
+  />
+
+  <img
+    class="rounded-md shadow-xs"
+    src={img5}
+    width="300"
+    alt="Steens Mountain fall colors from Fish Creek Canyon"
+  />
+
+  <img
+    class="rounded-md shadow-xs"
+    src={img6}
+    width="300"
+    alt="Steens Mountain fall colors from Fish Creek Canyon"
+  />
+
+  <img
+    class="rounded-md shadow-xs"
+    src={img7}
+    width="300"
+    alt="Steens Mountain fall colors from Fish Creek Canyon"
+  />
+
+  <img
+    class="rounded-md shadow-xs"
+    src={img8}
+    width="300"
+    alt="Steens Mountain fall colors from Fish Creek Canyon"
+  />
+
+  <img
+    class="rounded-md shadow-xs"
+    src={img9}
+    width="300"
+    alt="Steens Mountain fall colors from Fish Creek Canyon"
+  />
 </div>
