--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@ import DarkModeToggle from "./DarkModeToggle.astro";
   >
     <a
       class="unset ml-4 rounded-sm transition-[background-size] duration-150 bg-left-bottom bg-[length:0%_55%] hover:bg-[length:100%_55%] bg-no-repeat bg-gradient-to-r from-primary-blue to-primary-blue dark:bg-none dark:hover:text-primary-blue"
-      href="https://twitter.com/flexdinesh"
+      href=""
     >Apply &rarr;
     </a>
   </div>
