--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -7,10 +7,8 @@ import HeaderLink from "./HeaderLink.astro";
     <section class="text-text-bold">
       <ul class="unset flex gap-4 [&>li]:p-0">
         <li><HeaderLink href="/">Home</HeaderLink></li>
-          <li><HeaderLink href="/mission-and-purpose">Mission</HeaderLink></li>
-          <li><HeaderLink href="/services">Our Services</HeaderLink></li>
-          <li><HeaderLink href="/land-use">Our Land Use</HeaderLink></li>
-          <li><HeaderLink href="/practices">Our Practices</HeaderLink></li>
+          <li><HeaderLink href="/about-us">About Us</HeaderLink></li>
+          <li><HeaderLink href="/careers">Careers</HeaderLink></li>
       </ul>
     </section>
   </nav>
